# ZPG_projekt

./: .gitignore  CMakeLists.txt  README.md
src/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Engine_old.cpp  Engine_old.h  Factory.cpp  Material.cpp  Material.h  Scene.cpp  Scene.h  Window.cpp  Window.h  main.cpp  xd.cpp
src/Input/: MouseListener.h
src/Lights/: DirectionalLight.cpp  DirectionalLight.h  Flashlight.cpp  Flashlight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/Models/: Model.cpp  Model.h  Plain_uv.h  Rectangle.cpp  Rectangle.h
src/Objects/: Enemy.cpp  Enemy.h  Object.cpp  Object.h  Rectangle.cpp  Rectangle.h  Skybox.cpp  Skybox.h
src/Shaders/: Fragment_shader.h  Fragment_shader2.shader  Fragment_shader_Lambert.glsl  Fragment_shader_Light.glsl  Fragment_shader_Light_Material.glsl  Fragment_shader_Phong.glsl  Fragment_shader_Phong.shader  Fragment_shader_Texture.glsl  Shader.cpp  Shader.h  Vertex_shader.h  Vertex_shader2.shader  Vertex_shader_Const.glsl  Vertex_shader_Labert.shader  Vertex_shader_Light.glsl  Vertex_shader_Phong.glsl
src/Textures/: Texture.cpp  Texture.h
src/Transforms/: Transform.cpp  Transform.h
src/Utils/: Observer.h  utils.h
